// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`floodFillPath 1`] = `
"Distance to nearest path
.	.	.	.	.	.	.	.	.
.	2	1	1	1	2	3	4	.
.	1	0	0	0	1	2	3	.
.	2	1	1	0	1	2	3	.
.	3	2	1	0	1	2	3	.
.	3	2	1	0	1	1	2	.
.	3	2	1	0	0	0	1	.
.	4	3	2	1	1	1	2	.
.	.	.	.	.	.	.	.	."
`;

exports[`floodFillPath 2`] = `
"Direction to follow path
.	.	.	.	.	.	.	.	.
.	1	1	1	9	9	9	9	.
.	1	1	1	9	9	9	9	.
.	1	1	1	9	9	9	9	.
.	1	1	9	9	9	9	9	.
.	9	9	9	9	9	1	1	.
.	1	1	1	1	1	1	1	.
.	1	1	1	1	1	1	1	.
.	.	.	.	.	.	.	.	."
`;

exports[`floodFillPath 3`] = `
"Distance to nearest team 1
.	.	.	.	.	.	.	.	.
.	2	1	2	3	4	5	6	.
.	1	0	1	2	3	4	5	.
.	2	1	2	3	4	5	6	.
.	3	2	3	4	5	6	7	.
.	4	3	4	5	6	7	8	.
.	5	4	5	6	7	.	9	.
.	6	5	6	7	8	9	10	.
.	.	.	.	.	.	.	.	."
`;

exports[`floodFillPath 4`] = `
"Direction to nearest team 1
.	.	.	.	.	.	.	.	.
.	1	9	9	-1	-1	-1	-1	.
.	1	1	-1	-1	-1	-1	-1	.
.	1	-9	-9	-1	-1	-1	-1	.
.	-9	-9	-9	-9	-1	-1	-1	.
.	-9	-9	-9	-9	-9	-1	-1	.
.	-9	-9	-9	-9	-9	.	-9	.
.	-9	-9	-9	-9	-9	-1	-9	.
.	.	.	.	.	.	.	.	."
`;

exports[`floodFillPath 5`] = `
"Distance to nearest team 2
.	.	.	.	.	.	.	.	.
.	10	9	8	7	6	5	6	.
.	9	.	7	6	5	4	5	.
.	8	7	6	5	4	3	4	.
.	7	6	5	4	3	2	3	.
.	6	5	4	3	2	1	2	.
.	5	4	3	2	1	0	1	.
.	6	5	4	3	2	1	2	.
.	.	.	.	.	.	.	.	."
`;

exports[`floodFillPath 6`] = `
"Direction to nearest team 2
.	.	.	.	.	.	.	.	.
.	1	1	9	9	9	9	9	.
.	9	.	9	9	9	9	9	.
.	1	1	1	9	9	9	9	.
.	1	1	1	1	9	9	9	.
.	1	1	1	1	1	9	9	.
.	1	1	1	1	1	1	-1	.
.	1	1	1	1	1	-9	-9	.
.	.	.	.	.	.	.	.	."
`;
